# jacques

./: .anjuta_sym_db.db  .gitignore  .travis.yml  AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/src/: Makefile  jacques
Debug/src/.deps/: main.Po
Debug/src/jio/: Makefile
etc/jacques/: jacques.conf
etc/jacques/app-enabled/: gandalf
etc/jacques/conf.d/: hello.conf
po/: LINGUAS  POTFILES.in  en_US.po  zh_CN.po
src/: Makefile.am  Makefile.in  batch.sh  client.c  config.c  config.h  core.c  core.h  err.h  flood.sh  hellomod.c  hooks.c  hooks.h  log.c  log.h  main.c  master.c  master.h  mod-pub.h  mod.c  mod.h  server.c  server.h  struct.c  struct.h  utils.c  utils.h  worker.c  worker.h
src/conf/: Makefile.am  Makefile.in  jconf.c  jconf.h
src/ge/: Makefile.am  Makefile.in  README  ge.h  geslice.c  geslice.h
src/io/: Makefile.am  Makefile.in  jfile.c  jfile.h  jio.h  jpoll.c  jpoll.h  jsocket.c  jsocket.h
src/jac/: Makefile.am  Makefile.in  hooks.c  hooks.h  jac.h  jconf.c  jconf.h  jconfstruct.c  jconfstruct.h  mod.c  mod.h  struct.h
src/jac/jconf/: Makefile.am  Makefile.in  jconf.c  jconf.h  main.c  private.h  struct.c  struct.h
src/jconf/: Makefile.am  Makefile.in  README  jconf.c  jconf.h  libjconf.la  struct.c  struct.h
src/jio/: Makefile.am  Makefile.in  jio.h  jpoll.c  jpoll.h  jsocket.c  jsocket.h  pack.c  pack.h
src/modules/: Makefile  hello.c
src/modules/.deps/: hello.Plo
src/modules/.libs/: libhello.lai  libhello.so.0.0.0
